--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "webpack-dev-server"
+		"dev": "webpack-dev-server --config ./config/webpack.config.js"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.2.0",
